# notably

./: AUTHORS  CMakeLists.txt  ChangeLog  README  main.cpp  mainwindow.cpp  mainwindow.h  noteedit.cpp  noteedit.h  noteitemdelegate.cpp  noteitemdelegate.h  notesmodel.cpp  notesmodel.h  notesview.cpp  notesview.h  notewidget.cpp  notewidget.h  porterstemmer.h  sidebar.cpp  sidebar.h  tagcompleter.cpp  tageditor.cpp  tageditor.h  titlebar.cpp  titlebar.h
config/: behaviorsettings.ui  nnotes.kcfg  windowsettings.cpp  windowsettings.h  windowsettings.ui
src/: CMakeLists.txt  annotationgrouptextobject.cpp  annotationgrouptextobject.h  annotationgroupwidget.cpp  annotationgroupwidget.h  annotationtextobject.cpp  annotationtextobject.h  browsemenu.cpp  browsemenu.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  notably.desktop  notebrowser.cpp  notebrowser.h  notedocument.cpp  notedocument.h  noteedit.cpp  noteedit.h  noteinformation.cpp  noteinformation.h  noteitemdelegate.cpp  notesmodel.cpp  notesmodel.h  notesview.cpp  notesview.h  notewidget.cpp  notewidget.h  persontextobject.cpp  persontextobject.h  porterstemmer.cpp  resourcemodel.cpp  resourcemodel.h  sidebar.cpp  sidebar.h  tageditor.cpp  titlebar.cpp  titlebar.h
src/annotation/: annotation.cpp  annotation.h  annotation_p.h  annotationplugin.cpp  annotationplugin.h  annotationpluginfactory.cpp  annotationpluginfactory.h  annotationpluginwrapper.cpp  annotationpluginwrapper.h  annotationrequest.cpp  annotationrequest.h  annotationrequest_p.h  annotator.cpp  annotator.h  simpleannotation.cpp  simpleannotation.h  textannotation.cpp  textannotation.h  textannotationgroup.cpp  textannotationgroup.h
src/annotation/person/: CMakeLists.txt  personannotationplugin.cpp  personannotationplugin.desktop  personannotationplugin.h
src/config/: nnotes.kcfg  settings.kcfgc  windowsettings.cpp  windowsettings.h
src/person/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  person.cpp  person.h  personcompleter.cpp  personcompleter.h  persondelegate.cpp  persondelegate.h  persongrid.cpp  persongrid.h  personmodel.cpp  personmodel.h  persontooltip.cpp  persontooltip.h
src/tageditor/: tag.cpp  tagcloud.cpp  tagdelegate.cpp  tagdelegate.h  tageditor.h  tagview.cpp  tagview.h  tagwidget.cpp  tagwidget.h
src/tags/: flowlayout.cpp  flowlayout.h  tag.cpp  tag.h  tagcloud.cpp  tagcloud.h  tagcompleter.cpp  tagcompleter.h  tageditor.cpp  tageditor.h  tagview.cpp  tagview.h  tagwidget.cpp  tagwidget.h
